# neurocomplexity

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-lock.txt
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: calibration.yml  publish.yml  test.yml
conda-recipe/: build.sh  meta.yaml
datasets/: steinmetz_bin_sensitivity.py  steinmetz_table3_ci.py
docs/: Makefile  api_stability.md  benchmarks.md  calibration_report.md  complexity_measures.md  conf.py  index.md  inference.md  inference_figures.md  installation.md  io.md  phase2_math_audit.md  phase3_reproducibility_audit.md  phase4_review_A_report.md  phase4_review_B_report.md  phase4_review_C_report.md  phase4_review_panel.md  phase4_revision_summary.md  phase4prime_rereview.md  phase7_reproduction.md  publication_plan.md  quickstart.md  tutorial_agent_prompt.md
docs/api/: index.md
docs/decisions/: 2026-05-29-criticality-bin-selection.md  2026-06-10-camera-ready-regeneration.md  2026-06-10-steinmetz-funnel-reconciliation.md
docs/examples/: tutorial.ipynb
docs/paper/: references.md
docs/plans/: 2026-05-17-io-extension.md
docs/references/: qc_thresholds.md
docs/specs/: 2026-05-17-io-extension.md
docs/superpowers/plans/: 2026-05-21-complexity-figures.md
docs/superpowers/specs/: 2026-05-20-continuous-signal-design.md  2026-05-20-memory-safety-design.md  2026-05-20-nwb-roundtrip-writer-design.md  2026-05-20-progress-bars-design.md  2026-05-20-stationarity-diagnostics-design.md  2026-05-21-complexity-figures-design.md
examples/: _npultra_sweep2_results.csv  _npultra_sweep3_results.csv  _npultra_sweep_crit.csv  _npultra_sweep_stat.csv  benchmark_concordance.py  benchmark_seed_sensitivity.py  fig_manifold_mse.py  fig_manifold_mse_stim.py  integration_session_715093703.py  integration_session_715093703_light.py  integration_session_715093703_spont.py  npultra_waveforms_2024_tutorial.ipynb
neurocomplexity/: __init__.py  __main__.py  _progress.py  _warnings.py  cli.py  warnings.py
neurocomplexity/analysis/: __init__.py  _binning.py  _continuous.py  autonomy.py  branching.py  complexity.py  criticality.py  dimensionality.py  manifold.py  mse.py  pid.py  selection.py  shape_collapse.py  stationarity.py  surrogates.py  transfer_entropy.py
neurocomplexity/benchmarks/: __init__.py  runner.py
neurocomplexity/benchmarks/cases/: concordance.py  criticality.py  dimensionality.py  info_theory.py  pid.py  shape_collapse.py
neurocomplexity/benchmarks/simulators/: ar_processes.py  branching_network.py  pid_distributions.py  structured_covariance.py
neurocomplexity/core/: __init__.py  continuous.py  exceptions.py  provenance.py  recording.py
neurocomplexity/inference/: __init__.py  _adapters.py  bootstrap.py  null_test.py  pool.py  results.py  surrogates.py
neurocomplexity/io/: __init__.py  _anatomy.py  _anatomy_sharptrack.py  _merge.py  _qc.py  _sniff.py  _sorter_output.py  _trials.py  dict_loader.py  kilosort.py  nwb.py  phy.py  spikeinterface.py
neurocomplexity/io/_ndx/: __init__.py
neurocomplexity/viz/: __init__.py  _palettes.py  _panel.py  _save.py  _scale_bar.py  _style.py  branching.py  complexity.py  criticality.py  dimensionality.py  inference.py  manifold.py  mse.py  network.py  overview.py  pid.py  population.py  shape_collapse.py
paper/: paper.bib  paper.md
paper/figures/: README.md
scripts/: generate_calibration_report.py
tests/: _sorter_fixtures.py  test_analysis_autonomy_calibration.py  test_analysis_autonomy_result.py  test_analysis_binning_by_type.py  test_analysis_binning_dtype.py  test_analysis_complexity.py  test_analysis_criticality.py  test_analysis_criticality_adaptive.py  test_analysis_criticality_exponents.py  test_analysis_criticality_gamma.py  test_analysis_criticality_rma.py  test_analysis_manifold.py  test_analysis_mse.py  test_analysis_mse_backend.py  test_analysis_mse_warn.py  test_analysis_pid_iccs.py  test_analysis_selection.py  test_analysis_stationarity.py  test_analysis_te_bias.py  test_analysis_te_discretize.py  test_analysis_te_signals.py  test_api_stability.py  test_benchmarks_cli.py  test_benchmarks_concordance.py  test_benchmarks_criticality.py  test_benchmarks_dimensionality.py  test_benchmarks_info_theory.py  test_benchmarks_pid.py  test_benchmarks_runner.py  test_benchmarks_shape_collapse.py  test_benchmarks_simulators.py  test_cli_analyze_smoke.py  test_cli_integration.py  test_complexity_top_level_exports.py  test_continuous_signal.py  test_inference_adapters.py  test_inference_adapters_complexity.py  test_inference_bca.py  test_inference_bootstrap.py  test_inference_calibration.py  (+19 more)
tests/io/: test_add_anatomy.py  test_add_quality.py  test_add_trials.py  test_merge_probes.py  test_sniff.py
tests/viz/: test_complexity.py  test_figures.py  test_inference.py  test_manifold.py  test_mse.py  test_network.py  test_palettes.py  test_panel.py  test_population.py  test_save.py  test_scale_bar.py
tutorial/: _build_comprehensive.py  _build_notebook.py  comprehensive_tutorial.ipynb
